# bevy_jam2

./: .gitmodules  Cargo.toml
.cargo/: config
.github/workflows/: ci.yaml  release.yaml
assets/: bubble.aseprite  bubble.json  door.aseprite  ferris2.0.aseprite  ferris2.0.json  world.ldtk
assets/background1/: SOURCE
crates/bevy-parallax/src/: lib.rs  parallax.rs
src/: assets.rs  camera.rs  collision.rs  debug_ui.rs  ferris.rs  firework.rs  lib.rs  main.rs  menu.rs  spritesheet.rs  world.rs
src/camera/: components.rs  mod.rs  plugin.rs  systems.rs
src/collision/: components.rs  mod.rs  plugin.rs  systems.rs
src/ferris/: components.rs  constants.rs  events.rs  mod.rs  plugin.rs  systems.rs
src/firework/: mod.rs  plugin.rs  resources.rs  systems.rs
src/spritesheet/: aseprite.rs  asset.rs  components.rs  mod.rs  plugin.rs  systems.rs
src/world/: components.rs  mod.rs  plugin.rs  resources.rs  systems.rs
