[package]
name = "game3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
inspector = ["bevy-inspector-egui"]
debug_ui = ["bevy_egui"]
#default = ["debug_ui"]

[dependencies]
anyhow = "1"
#bevy = { version = "0.8", features = ["dynamic"] }
bevy = { version = "0.8" }

bevy_ecs_ldtk = { version = "0.4", features = ["atlas"] }
bevy_ecs_ldtk_macros = "0.4"
bevy_ecs_tilemap = "0.7"
bevy_asset_loader = "0.12"
bevy-inspector-egui = { version = "0.12", optional = true }
bevy_egui = { version = "0.15", optional = true }
serde_json = "1"
serde = "1"
bevy_rapier2d = "*"
rand = "0.8"

[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
